Add android api key

--- a/l9_map/android/app/src/main/AndroidManifest.xml
+++ b/l9_map/android/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:theme="@style/AppTheme">
+      <meta-data
+       android:name="com.google.android.geo.API_KEY"
+       android:value="AIzaSyCKspSGmpYn3GxZfIc_Sccu7x-8qXQcZkI"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
