--- a/l12_firebase/package.json
+++ b/l12_firebase/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "firebase": "^3.6.0",
+    "moment": "^2.16.0",
     "react": "15.3.2",
     "react-native": "0.37.0",
     "react-native-background-timer": "^0.1.3"
