--- a/l12_firebase/package.json
+++ b/l12_firebase/package.json
@@ -11,7 +11,9 @@
     "moment": "^2.16.0",
     "react": "15.3.2",
     "react-native": "0.37.0",
-    "react-native-background-timer": "^0.1.3"
+    "react-native-background-timer": "^0.1.3",
+    "react-native-facebook-login": "^1.4.0",
+    "react-native-firestack": "^2.3.3"
   },
   "jest": {
     "preset": "jest-react-native"
