--- a/l12_firebase/android/app/build.gradle
+++ b/l12_firebase/android/app/build.gradle
@@ -126,6 +126,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-facebook-login')
+    compile project(':react-native-firestack')
     compile project(':react-native-background-timer')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
