--- a/l12_firebase/android/settings.gradle
+++ b/l12_firebase/android/settings.gradle
@@ -1,5 +1,9 @@
 rootProject.name = 'l12_firebase'
 
 include ':app'
+include ':react-native-facebook-login'
+project(':react-native-facebook-login').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-facebook-login/android')
+include ':react-native-firestack'
+project(':react-native-firestack').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-firestack/android')
 include ':react-native-background-timer'
 project(':react-native-background-timer').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-background-timer/android')
