--- a/l13_authentication/android/settings.gradle
+++ b/l13_authentication/android/settings.gradle
@@ -1,5 +1,7 @@
 rootProject.name = 'l13_authentication'
 
 include ':app'
+include ':react-native-background-timer'
+project(':react-native-background-timer').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-background-timer/android')
 include ':react-native-firestack'
 project(':react-native-firestack').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-firestack/android')
